update readme + fix AddressMapStrategy